still trying to fix overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,10 +7,6 @@
     font-family: 'roboto';
 }
 
-html {
-    overflow-x: hidden;
-}
-
 @import 'headerAndHero';
 @import 'main__ctaButtonSection';
 @import 'main__referenceSection';
